--- a/2-ExpHbs/package.json
+++ b/2-ExpHbs/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "helmet": "^4.2.0",
     "path": "^0.12.7"
   },
   "devDependencies": {},
