--- a/5-Session/package.json
+++ b/5-Session/package.json
@@ -11,7 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "path": "^0.12.7",
+    "pg": "^8.4.2",
+    "rate-limiter-flexible": "^2.1.13",
+    "sequelize": "^6.3.5"
   }
 }
