--- a/5-Session/package.json
+++ b/5-Session/package.json
@@ -11,12 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "connect-pg-simple": "^6.2.1",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-enforces-ssl": "^1.1.0",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "helmet": "^4.2.0",
     "path": "^0.12.7",
-    "pg": "^8.4.2",
+    "pg": "^8.5.1",
     "rate-limiter-flexible": "^2.1.13",
     "sequelize": "^6.3.5"
   }
